(*) bootstrap.php (+) Router (+) Response

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "diqeeeeeeeeei/ga",
     "autoload": {
         "psr-4": {
-            "Diqeeeeeeeeei\\macro\\": "app"
+            "App\\": "app"
         }
     },
     "authors": [
