(+) added DbConnector.php (+) added config database (*) composer.json

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
             "email": "andrey.stosh@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.3|^8.0",
+        "ext-pdo": "*"
+    }
 }
